--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>iChat - Realtime Node Socket.io Chat App</title>
     <script defer src="http://localhost:8000/socket.io/socket.io.js"></script>
@@ -12,11 +11,9 @@
 <body>
     <nav>
         <img class = "logo" src = "chat.png" alt = "">
+        <h1>Welcome to iChat app</h1>
     </nav>
-    <div class="container">
-        <div class="message right">Harry: Hey how are you?</div>
-        <div class="message left">Rohan: Bhai I m fine. How about you?</div>
-    </div>
+    <div class="container"></div>
 
     <div class="send">
         <form action="#" id="send-container">
@@ -25,4 +22,4 @@
         </form>
     </div>
 </body>
-</html>
+</html> 
